dnl Process this file with autoconf to produce a configure script.
AC_INIT(xbiso.c,0.5.7,xbiso@linuxmail.org)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
dnl Replace `main' with a function in -lftp:
AC_CHECK_LIB(ftp, main,[LIBS="-DUSE_FTP -lftp"],AC_MSG_WARN([Warning libftp not found ftp features disabled]))

AC_ARG_ENABLE(ftp,
[

  --disable-ftp			Disables all ftp features and libftp dependancies
],[LIBS=""])

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h malloc.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_CHECK_FUNCS(mkdir strdup)

AC_OUTPUT(Makefile)
